@@ -14,6 +14,7 @@ Verilator 5.029 devel
 **Minor:**
 
 * Improve Verilation thread pool (#5161). [Bartłomiej Chmiel, Antmicro Ltd.]
+* Fix REALCVT warning on integral timescale conversions (#5378). [Liam Braun]
 * Fix dot fallback finding wrong symbols (#5394). [Arkadiusz Kozdra, Antmicro Ltd.]
 
 
